--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 	<head>
 		<meta charset="UTF-8"/>
+		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
 
 	<body>
 		<h1>Git</h1>
 		<h2>Trabalhando em equipe com controle e seguranca</h2>
-		
+
 		<ul>
 			<li>Fazer backup do seu projeto nao e o bastante para desfazer 
 			alteracoes com seguranca e eficiencia</li>
